eks-interview/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-deployment
  namespace: ks-interview

spec:
  replicas: 3

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
      - name: fastapi
        image: interview-app:v4
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
