eks-interview/k8s/pending-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pending-pod
spec:
  containers:
  - name: nginx
    image: nginx:stable
    resources:
      requests:
        cpu: "100"
        memory: "1Gi"
