eks-interview/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: ks-interview
spec:
  selector: 
    app: fastapi 
  ports:
    - protocol: TCP   
      port: 8000  
      targetPort: 8000  
  type: ClusterIP
